# mp3w-clerk-role

./: .gitignore  README.md  index.html
ClerkScripts/: attendance.py  attendance_stats.py  person.py  prayers.py  ward_members.json
MemberDB/: .gitignore  CMakeLists.txt  CMakePresets.json
MemberDB/App/: CMakeLists.txt
MemberDB/App/Source/: Database.cpp  Database.h  Main.cpp  MainWindow.cpp  MainWindow.h
